<resources>
    <string name="app_name">ReXon Smart Attendance</string>
    <string name="login">login</string>
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
    <string name="welcome">WELCOME</string>
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="todo">TODO</string>
<!--    <string name="todo">TODO</string>-->
</resources>