<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amazon"
    android:foregroundTint="#BC2B2B"
    >
    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="Sign in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"

        android:hint="@string/user_id"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserName"
        android:layout_marginTop="110dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"

        android:textColorHint="@color/black" />

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            android:contentDescription="@string/todo"></ImageView>



        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"

            android:contentDescription="@string/todo" />


    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialicons"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="97dp"
        android:text="@string/sign_in" />


</RelativeLayout>